--- a/research.html
+++ b/research.html
@@ -63,17 +63,6 @@
 </div>
 
 <div class="paper">
-	<strong>SNAP: Efficient Extraction of Private Properties with Poisoning</strong>
-	<a href="https://arxiv.org/abs/2208.12348"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="">Harsh Chaudhuri</a>,
-	<a href="https://johnmath.github.io/">John Abascal</a>,
-	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>,
-	<a href="https://jagielski.github.io/">Matthew Jagielski</a>,
-	<a href="https://floriantramer.com/">Florian Tram&egrave;r</a>, and
-	Jonathan Ullman (contribution order)
-</div>
-
-<div class="paper">
 	<strong>How to Combine Membership-Inference Attacks on Multiple Updated Models</strong>
 	<a href="https://arxiv.org/abs/2205.06369"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://jagielski.github.io/">Matthew Jagielski</a>*,
@@ -93,11 +82,17 @@
 
 <h4>Conference Publications</h4>
 
-<!--<div class="paper">
-    <b>This Is the Name of a Paper</b><br/>
-    Coauthor One, Coauthor Two, and Coauthor Three.<br/>
-    In Alice Bob Charlie <b>(ABC 2020)</b>.
-</div>-->
+<div class="paper">
+	<strong>SNAP: Efficient Extraction of Private Properties with Poisoning</strong>
+	<a href="https://arxiv.org/abs/2208.12348"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="">Harsh Chaudhuri</a>,
+	<a href="https://johnmath.github.io/">John Abascal</a>,
+	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>,
+	<a href="https://jagielski.github.io/">Matthew Jagielski</a>,
+	<a href="https://floriantramer.com/">Florian Tram&egrave;r</a>, and
+	Jonathan Ullman (contribution order)<br/>
+	IEEE Symposium on Security and Privacy <strong>(IEEE S&P'23)</strong><br/>
+</div>
 
 <div class="paper">
 	<strong>A Private and Computationally Efficient Estimator for Unbounded Gaussians</strong>
@@ -118,7 +113,7 @@
 <a href="http://cs-people.bu.edu/ads22/">Adam Smith</a>,
 <a href="https://www.ccs.neu.edu/home/jullman/">Jonathan Ullman</a>, and
 <a href="http://www.ccs.neu.edu/home/lydiazak/">Lydia Zakynthinou</a><br/>
-Conference on Neural and Information Processing Systems <strong>(NeurIPS'21)</strong><br/>
+Conference on Neural and Information Processing Systems <strong>(NeurIPS '21)</strong><br/>
 <span id="date">Selected as a Spotlight Presentation</span><br/>
 </div>
 
@@ -149,7 +144,7 @@ ACM Symposium on Theory of Computing <strong>(STOC '21)</strong><br/>
 <a href="http://www.ccs.neu.edu/home/albertcheu/">Albert Cheu</a>,
 <a href="http://www.cse.psu.edu/~ads22/">Adam Smith</a>, and
 Jonathan Ullman<br/>
-IEEE Symposium on Security and Privacy <strong>(IEEE S&P'21)</strong><br/>
+IEEE Symposium on Security and Privacy <strong>(IEEE S&P '21)</strong><br/>
 </div>
 
 <div class="paper">
