--- a/research.html
+++ b/research.html
@@ -72,14 +72,6 @@
 	<a href="https://roxanageambasu.github.io/">Roxana Geambasu</a> (contribution order)
 </div>
 
-<div class="paper">
-	<strong>Fair and Optimal Cohort Selection for Linear Utility</strong>
-	<a href="https://arxiv.org/abs/2102.07684"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="">Konstantina Bairaktari</a>,
-	<a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Le Nguyen</a>, and
-	Jonathan Ullman
-</div>
-
 <h4>Conference Publications</h4>
 
 <div class="paper">
@@ -675,6 +667,16 @@ SIAM Journal on Computing, 2013<br/>
 <h4>Surveys and Other Writing</h4>
 
 <div class="paper">
+	<strong>Fair and Useful Cohort Selection</strong>
+	<a href="https://arxiv.org/abs/2009.02207"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="">Konstantina Bairaktari</a>,
+	<a href="">Paul Langton</a>,
+	<a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Le Nguyen</a>, 
+	<a href="https://nik-sm.github.io/">Niklas Smedemark-Margulies</a>, and
+	Jonathan Ullman
+</div>
+
+<div class="paper">
 <strong>DifferentialPrivacy.org</strong>
 <a href="https://differentialprivacy.org/"><span id="label-preprint">Website</span></a></br>
 Blog
@@ -696,6 +698,19 @@ Jonathan Ullman</br>
 <a href="https://cacm.acm.org/magazines/2017/4/215045-technical-perspective-building-a-safety-net-for-data-reuse/abstract"><span id="label-preprint">CACM</span></a></br>
 Jonathan Ullman</br>
 Communications of the ACM, 2017</br>
+</div>
+
+<div class="paper">
+	<strong>PSI (&Psi;): A Private data Sharing Interface</strong>
+	<a href="https://arxiv.org/abs/1609.04340"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://cs-people.bu.edu/gaboardi/">Marco Gaboardi</a>,
+	<a href="https://hona.kr/">James Honaker</a>,
+	<a href="https://gking.harvard.edu/">Gary King</a>,
+	<a href="">Jack Murtagh</a>, 
+	<a href="https://people.cs.georgetown.edu/~kobbi/">Kobbi Nissim</a>,
+	Jonathan Ullman, and
+	<a href="https://salil.seas.harvard.edu/">Salil Vadhan</a>
+</div>
 
 </div><div class="paper">
 <strong>Exposed! A Survey of Attacks on Private Data</strong>
