--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 			
 		<p>I am a member of the <a href="https://bostondataprivacy.github.io">Boston-Area Data Privacy Group</a> and I also co-organize the <a href="https://tpdp.journalprivacyconfidentiality.org/">Workshop on Theory and Practice of Differential Privacy</a>, and <a href="https://differentialprivacy.org">differentialprivacy.org</a>.  
 
-		<p>At Northeastern, I am a member of the <a href="https://www2.ccs.neu.edu/theory/">Theory Group,</a> the <a href="https://cyber.khoury.northeastern.edu/">Cybersecurity & Privacy Institute,</a> and the <a href="https://ai.northeastern.edu/">Institute for Experiential AI.</a></p>
+		<p>At Northeastern, I am a member of the <a href="https://www2.ccs.neu.edu/theory/">Theory Group</a>, the <a href="https://neucrypt.github.io">Cryptography and Privacy Group</a> and the <a href="https://cyber.khoury.northeastern.edu/">Cybersecurity & Privacy Institute</a>.  I am also an affiliate member of the <a href="https://ai.northeastern.edu/">Institute for Experiential AI.</a></p>
 			
 		<!--<p>Before coming to Northeastern I got my PhD from Harvard in 2013 and spent a year as a member of the Simons Society of Fellows.-->
 
