--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -379,7 +379,8 @@
       <tr>
         <td>Tue<br/>12/13/22</td>
         <td>
-					<strong>Cookies and Companionship<strong>
+					<strong>Cookies and Companionship<strong><br/>
+					1:30-3:00pm in ISEC 623
 				</td>
 				<td></td>
         <td>Final Out<br/>
