--- a/cs7800-f22/schedule.html
+++ b/cs7800-f22/schedule.html
@@ -359,7 +359,7 @@
 					<ul>
 						<li>Huffman Codes</li>
 					</ul>
-					[slides]
+					<a href="assets/22-compression.pdf">[slides]</a>
 				</td>
 				<td>KT 4.8</td>
         <td></td>
@@ -371,7 +371,7 @@
 					<ul>
 						<li>Jon's Favorite Algorithm</li>
 					</ul>
-					[slides]
+					<a href="assets/23-no-regret.pdf">[slides]</a>
 				</td>
 				<td>R <a href="assets/mw-notes.pdf">I</a></td>
         <td><strong>HW6 Due</strong></td>
