--- a/research.html
+++ b/research.html
@@ -45,6 +45,17 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
+	<strong>A Bias-Variance-Privacy Trilemma for Statistical Estimation</strong>
+	<a href="https://arxiv.org/abs/2301.13334"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
+	<a href="https://argymouz.github.io/">Argyris Mouzakis</a>, 
+	<a href="https://thesalon.github.io/author/matthew-regehr/">Matthew Regehr</a>, 
+	<a href="http://www.ccs.neu.edu/home/vikrantsinghal/">Vikrant Singhal</a>, 
+	<a href="http://www.thomas-steinke.net/">Thomas Steinke</a>, and
+	Jonathan Ullman
+</div>
+
+<div class="paper">
 	<strong>Instance-Optimal Differentially Private Estimation</strong>
 	<a href="https://arxiv.org/abs/2210.15819"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://audramarymcmillan.wixsite.com/mysite">Audra McMillan</a>,
