--- a/research.html
+++ b/research.html
@@ -73,6 +73,8 @@
 	<a href="https://www.ccs.neu.edu/home/lydiazak/">Lydia Zakynthinou</a>
 </div>
 
+<h4>Conference Publications</h4>
+
 <div class="paper">
 	<strong>How to Combine Membership-Inference Attacks on Multiple Updated Models</strong>
 	<a href="https://arxiv.org/abs/2205.06369"><span id="label-preprint">arXiv</span></a><br/>
@@ -80,10 +82,9 @@
 	<a href="">Stanley Wu</a>*,
 	<a href="http://www.ccs.neu.edu/home/alina/">Alina Oprea</a>,
 	Jonathan Ullman, and
-	<a href="https://roxanageambasu.github.io/">Roxana Geambasu</a> (contribution order)
+	<a href="https://roxanageambasu.github.io/">Roxana Geambasu</a> (contribution order)<br/>
+	Privacy Enhancing Technologies Symposium <strong>(PETS 2023)</strong> (conditionally accepted)<br/>
 </div>
-
-<h4>Conference Publications</h4>
 
 <div class="paper">
 	<strong>SNAP: Efficient Extraction of Private Properties with Poisoning</strong>
