--- a/students.html
+++ b/students.html
@@ -47,7 +47,7 @@
 		<li> <a href=""> Konstantina Bairaktari</a>, PhD Student, co-advised with Huy Nguyen
 		<li> <a href="http://www.johnabascal.com/"> John Abascal</a>, PhD Student, co-advised with Alina Oprea
 		<li> <a href=""> Rose Silver</a>, PhD Student
-		<li> <a href="https://cs.uwaterloo.ca/~s34agarw/"> Sushant Agarwal</a>, PhD Student, co-advised with Alina Oprea
+		<li> <a href="https://sushaga.github.io//"> Sushant Agarwal</a>, PhD Student, co-advised with Alina Oprea
 		<li> <a href=""> Stanley Wu</a>, Undergraduate, co-advised with Alina Oprea
 	</ul>
 
