--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 		<li> <a href="">Konstantina Bairaktari</a> (PhD Student)
 		<li> <a href="http://www.johnabascal.com/">John Abascal</a> (PhD Student)
 		<li> <a href="">Rose Silver</a> (PhD Student)
-		<li> <a href="https://cs.uwaterloo.ca/~s34agarw/">Sushant Agarwal</a> (PhD Student)
+		<li> <a href="https://sushaga.github.io/">Sushant Agarwal</a> (PhD Student)
 		<li> <a href="">Stanley Wu</a> (Undergraduate)
 	</ul></p>
 
