--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 
 	<h4>Current Events</h4>
 	<div id="news">
-	<p>In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a>
-		
-	<p></p>	
+	<!--<p>In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a></p>-->
+	
 	<ul>
+		<li><span id="date">02-06-2023</span> New <a href="https://arxiv.org/abs/2302.01855">paper</a> on the connection between differential privacy and robust statistics.
 		<li><span id="date">02-01-2023</span> New <a href="https://arxiv.org/abs/2301.13334">paper</a> on bias and variance in statistical estimation.
 		<li><span id="date">10-31-2022</span> New <a href="https://arxiv.org/abs/2210.15819">paper</a> on instance-optimal private estimation.
 		<li><span id="date">08-24-2022</span> New website design courtesy of my bio/academic niece <a href="https://www.kiragoldner.com/index.html">Kira Goldner</a>!</li>
