--- a/research.html
+++ b/research.html
@@ -45,6 +45,14 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
+	<strong>From Robustness to Privacy and Back</strong>
+	<a href="https://arxiv.org/abs/2302.01855"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://web.stanford.edu/~asi/">Hilal Asi</a>,
+	Jonathan Ullman, and
+	<a href="https://www.ccs.neu.edu/home/lydiazak/">Lydia Zakynthinou</a>
+</div>
+
+<div class="paper">
 	<strong>A Bias-Variance-Privacy Trilemma for Statistical Estimation</strong>
 	<a href="https://arxiv.org/abs/2301.13334"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
