--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	<ul>
 		<li> <a href="http://www.mit.edu/~maryama/">Maryam Aliakbarpour</a> (Postdoc)
 		<li> <a href="http://www.ccs.neu.edu/home/lydiazak/">Lydia Zakynthinou</a> (PhD Student)
-		<li> <a href="">Konstantina Bairaktari</a> (PhD Student)
+		<li> <a href="https://konstantinabrk.github.io/">Konstantina Bairaktari</a> (PhD Student)
 		<li> <a href="http://www.johnabascal.com/">John Abascal</a> (PhD Student)
 		<li> <a href="">Rose Silver</a> (PhD Student)
 		<li> <a href="https://sushaga.github.io/">Sushant Agarwal</a> (PhD Student)
