--- a/students.html
+++ b/students.html
@@ -44,7 +44,7 @@
 	<ul>
 		<li> <a href="http://www.mit.edu/~maryama/"> Maryam Aliakbarpour</a>, Postdoc, joint with Boston University
 		<li> <a href="http://www.ccs.neu.edu/home/lydiazak/"> Lydia Zakynthinou</a>, PhD Student, co-advised with Huy Nguyen &nbsp;<span id="date">Facebook Fellow and Khoury PhD Research Award Winner</span>
-		<li> <a href=""> Konstantina Bairaktari</a>, PhD Student, co-advised with Huy Nguyen
+		<li> <a href="https://konstantinabrk.github.io/"> Konstantina Bairaktari</a>, PhD Student, co-advised with Huy Nguyen
 		<li> <a href="http://www.johnabascal.com/"> John Abascal</a>, PhD Student, co-advised with Alina Oprea
 		<li> <a href=""> Rose Silver</a>, PhD Student
 		<li> <a href="https://sushaga.github.io//"> Sushant Agarwal</a>, PhD Student, co-advised with Alina Oprea
