--- a/service.html
+++ b/service.html
@@ -43,6 +43,7 @@
 <h4> Organizer </h4>
 <ul>
 	<li> I co-organize the <a href="https://tpdp.journalprivacyconfidentiality.org/">Workshop on Theory and Practice of Differential Privacy</a> and co-chair its steering committee.
+	<li> I co-organized a <a href="https://bostondataprivacy.github.io/summerschool/">Boston Differential Privacy Summer School</a> in 2022.
 	<li> I am a co-founder of the blog/website <a href="differentialprivacy.org">differentialprivacy.org</a>.
 </ul>
 
@@ -54,13 +55,14 @@
 
 <h4> Program Committee Member / Area Chair </h4>
 <ul>
+	<li> Conference on Learning Theory (COLT): 2023</li>
 	<li> ACM Conference on Fairness, Accountability, and Transparency (FAccT): 2022</li>
 	<li> AAAI Conference on Artificial Intelligence (AAAI): 2022</li>
 	<li> IEEE Symposium on Security &amp; Privacy (S&amp;P): 2020, 2021</li>
 	<li> ACM Conference on Computer and Information Security (CCS): 2020</li>
 	<li> Information Theoretic Cryptography Conference (ITC): 2020</li>
 	<li> IEEE Symposium on Foundations of Computer Science (FOCS): 2018</li>
-	<li> SIAM Symposium on Discrete Algorithms (SODA): 2018</li>
+	<li> SIAM Symposium on Discrete Algorithms (SODA): 2018, 2024</li>
  	<li> ACM Conference on Economics and Computation (EC): 2016</li>
 	<li> Theory of Cryptography Conference (TCC): 2015, 2016</li>
 	<li> ACM Symposium on Theory of Computing (STOC): 2015</li>
