--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div id="pagetitle"> 
 		
-		<div id="headerimg"><img src="img/jon-miriam.jpg" height="300px"></div>    	
+		<div id="headerimg"><img src="img/jon2.png" height="300px"></div>    	
     <div id="name"> 
 			<div id="myname">Jonathan Ullman</div>
 	    <div id="myjob">
@@ -40,8 +40,9 @@
 			</div>
 			<div id="mycontact">
 				<strong>Office:</strong> 623 ISEC (805 Columbus Ave / Boston, MA, 02118)<br/>
-				<strong>Email:</strong> jullman&#64;ccs.neu.edu<br/>
+				<strong>Email:</strong> jullman&#64;ccs.neu.edu<br/>	
 			</div>
+			
 			<a href="assets/cv.pdf"><img src="img/cv-logo.png" height="40px"></a>
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 			<a href="https://scholar.google.com/citations?hl=en&user=WfS41RAAAAAJ&view_op=list_works&sortby=pubdate"><img src="img/gscholar-logo.png" height="40px"></a>
@@ -59,10 +60,8 @@
 	<h4>About Me</h4>
       
 	  <p>My research centers on the foundations of privacy for machine learning and statistics, in particular differential privacy and its surprising interplay with other topics such as statistical validity, robustness, cryptography, and fairness. My background is in theoretical computer science, but increasingly my work spans machine learning, statistics, cryptography, and cybersecurity.  My research and teaching have been recognized with an NSF CAREER award and the Ruth and Joel Spira Outstanding Teaching Award.
-			
-		<p>I am a member of the <a href="https://bostondataprivacy.github.io">Boston-Area Data Privacy Group</a> and I also co-organize the <a href="https://tpdp.journalprivacyconfidentiality.org/">Workshop on Theory and Practice of Differential Privacy</a>, and <a href="https://differentialprivacy.org">differentialprivacy.org</a>.  
 
-		<p>At Northeastern, I am a member of the <a href="https://www2.ccs.neu.edu/theory/">Theory Group</a>, the <a href="https://neucrypt.github.io">Cryptography and Privacy Group</a> and the <a href="https://cyber.khoury.northeastern.edu/">Cybersecurity & Privacy Institute</a>.  I am also an affiliate member of the <a href="https://ai.northeastern.edu/">Institute for Experiential AI.</a></p>
+		<p>At Northeastern, I am a member of the <a href="https://www2.ccs.neu.edu/theory/">Theory Group</a>, the <a href="https://neucrypt.github.io">Cryptography and Privacy Group</a> and the <a href="https://cyber.khoury.northeastern.edu/">Cybersecurity & Privacy Institute</a>.  I am also a member of the <a href="https://bostondataprivacy.github.io">Boston-Area Data Privacy Group</a></p>
 			
 		<!--<p>Before coming to Northeastern I got my PhD from Harvard in 2013 and spent a year as a member of the Simons Society of Fellows.-->
 
@@ -106,5 +105,32 @@
 
   </body>
 
+	<script>
+		// Get the modal
+		var modal = document.getElementById("myModal");
+
+		// Get the button that opens the modal
+		var btn = document.getElementById("myBtn");
+
+		// Get the <span> element that closes the modal
+		var span = document.getElementsByClassName("close")[0];
+
+		// When the user clicks the button, open the modal 
+		btn.onclick = function() {
+		  modal.style.display = "block";
+		}
+
+		// When the user clicks on <span> (x), close the modal
+		span.onclick = function() {
+		  modal.style.display = "none";
+		}
+
+		// When the user clicks anywhere outside of the modal, close it
+		window.onclick = function(event) {
+		  if (event.target == modal) {
+		    modal.style.display = "none";
+		  }
+		}
+	</script>	
 
 </html>
