--- a/research.html
+++ b/research.html
@@ -45,14 +45,6 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
-	<strong>From Robustness to Privacy and Back</strong>
-	<a href="https://arxiv.org/abs/2302.01855"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="https://web.stanford.edu/~asi/">Hilal Asi</a>,
-	Jonathan Ullman, and
-	<a href="https://www.ccs.neu.edu/home/lydiazak/">Lydia Zakynthinou</a>
-</div>
-
-<div class="paper">
 	<strong>A Bias-Variance-Privacy Trilemma for Statistical Estimation</strong>
 	<a href="https://arxiv.org/abs/2301.13334"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
@@ -84,6 +76,15 @@
 <h4>Conference Publications</h4>
 
 <div class="paper">
+	<strong>From Robustness to Privacy and Back</strong>
+	<a href="https://arxiv.org/abs/2302.01855"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://web.stanford.edu/~asi/">Hilal Asi</a>,
+	Jonathan Ullman, and
+	<a href="https://www.ccs.neu.edu/home/lydiazak/">Lydia Zakynthinou</a><br/>
+	International Conference on Machine Learning <strong>(ICML '23)</strong><br/>
+</div>
+
+<div class="paper">
 	<strong>How to Combine Membership-Inference Attacks on Multiple Updated Models</strong>
 	<a href="https://arxiv.org/abs/2205.06369"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://jagielski.github.io/">Matthew Jagielski</a>*,
@@ -91,7 +92,7 @@
 	<a href="http://www.ccs.neu.edu/home/alina/">Alina Oprea</a>,
 	Jonathan Ullman, and
 	<a href="https://roxanageambasu.github.io/">Roxana Geambasu</a> (contribution order)<br/>
-	Privacy Enhancing Technologies Symposium <strong>(PETS 2023)</strong> (conditionally accepted)<br/>
+	Privacy Enhancing Technologies Symposium <strong>(PETS '23)</strong><br/>
 </div>
 
 <div class="paper">
