--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				Northeastern University<br/>
 			</div>
 			<div id="mycontact">
-				<strong>Office:</strong> 623 ISEC (805 Columbus Ave / Boston, MA, 02118)<br/>
+				<strong>Office:</strong> 623 ISEC (805 Columbus Ave, Boston, MA, 02118)<br/>
 				<strong>Email:</strong> jullman&#64;ccs.neu.edu<br/>	
 			</div>
 			
@@ -70,6 +70,9 @@
 	<!--<p>In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a></p>-->
 	
 	<ul>
+		<li><span id="date">05-11-2023</span> Excited for <a href="https://bostondataprivacy.github.io/privacy-day.html">Charles River Privacy Day!</a>
+		<li><span id="date">04-24-2023</span> Huge congratulations to <a href="http://www.mit.edu/~maryama/">Maryam</a> on her faculty position at Rice University!
+		<li><span id="date">04-24-2023</span> Congratulations to <a href="http://www.ccs.neu.edu/home/lydiazak/">Lydia</a> on her ICML <a href="https://arxiv.org/abs/2302.01855">paper</a>!
 		<li><span id="date">02-06-2023</span> New <a href="https://arxiv.org/abs/2302.01855">paper</a> on the connection between differential privacy and robust statistics.
 		<li><span id="date">02-01-2023</span> New <a href="https://arxiv.org/abs/2301.13334">paper</a> on bias and variance in statistical estimation.
 		<li><span id="date">10-31-2022</span> New <a href="https://arxiv.org/abs/2210.15819">paper</a> on instance-optimal private estimation.
