--- a/research.html
+++ b/research.html
@@ -63,17 +63,18 @@
 	Jonathan Ullman
 </div>
 
+<h4>Conference Publications</h4>
+
 <div class="paper">
 	<strong>Multitask Learning via Shared Features: Algorithms and Hardness</strong>
 	<a href="https://arxiv.org/abs/2209.03112"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="">Konstantina Bairaktari</a>,
+	<a href="https://konstantinabrk.github.io/">Konstantina Bairaktari</a>,
 	<a href="https://web.stanford.edu/~gblanc/">Guy Blanc</a>,
 	<a href="http://theory.stanford.edu/~liyang/">Li-Yang Tan</a>,
 	Jonathan Ullman, and
-	<a href="https://www.ccs.neu.edu/home/lydiazak/">Lydia Zakynthinou</a>
+	<a href="https://www.ccs.neu.edu/home/lydiazak/">Lydia Zakynthinou</a><br/>
+	Conference on Learning Theory <strong>(COLT '23)</strong><br/>
 </div>
-
-<h4>Conference Publications</h4>
 
 <div class="paper">
 	<strong>From Robustness to Privacy and Back</strong>
