--- a/research.html
+++ b/research.html
@@ -45,6 +45,15 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
+	<strong>Differentially Private Medians and Interior Points for Non-Pathological Data</strong>
+	<a href="https://arxiv.org/abs/2305.13440"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://www.mit.edu/~maryama/">Maryam Aliakbarpour</a>,
+	<a href="http://www.thomas-steinke.net/">Thomas Steinke</a>,
+	<a href="">Rose Silver</a>, and
+	Jonathan Ullman
+</div>
+
+<div class="paper">
 	<strong>A Bias-Variance-Privacy Trilemma for Statistical Estimation</strong>
 	<a href="https://arxiv.org/abs/2301.13334"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
