--- a/research.html
+++ b/research.html
@@ -47,9 +47,9 @@
 <div class="paper">
 	<strong>Differentially Private Medians and Interior Points for Non-Pathological Data</strong>
 	<a href="https://arxiv.org/abs/2305.13440"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="https://www.mit.edu/~maryama/">Maryam Aliakbarpour</a>,
-	<a href="http://www.thomas-steinke.net/">Thomas Steinke</a>,
-	<a href="">Rose Silver</a>, and
+	<a href="https://www.mit.edu/~maryama/">Maryam Aliakbarpour</a>,	
+	<a href="">Rose Silver</a>,
+	<a href="http://www.thomas-steinke.net/">Thomas Steinke</a>, and
 	Jonathan Ullman
 </div>
 
