--- a/students.html
+++ b/students.html
@@ -42,17 +42,19 @@
 		
 <h4>Current Students</h4>
 	<ul>
-		<li> <a href="http://www.mit.edu/~maryama/"> Maryam Aliakbarpour</a>, Postdoc, joint with Boston University
 		<li> <a href="http://www.ccs.neu.edu/home/lydiazak/"> Lydia Zakynthinou</a>, PhD Student, co-advised with Huy Nguyen &nbsp;<span id="date">Facebook Fellow and Khoury PhD Research Award Winner</span>
 		<li> <a href="https://konstantinabrk.github.io/"> Konstantina Bairaktari</a>, PhD Student, co-advised with Huy Nguyen
 		<li> <a href="http://www.johnabascal.com/"> John Abascal</a>, PhD Student, co-advised with Alina Oprea
 		<li> <a href=""> Rose Silver</a>, PhD Student
 		<li> <a href="https://sushaga.github.io//"> Sushant Agarwal</a>, PhD Student, co-advised with Alina Oprea
-		<li> <a href=""> Stanley Wu</a>, Undergraduate, co-advised with Alina Oprea
 	</ul>
+	<!--<ul>
+		
+	</ul>-->
 
 <h4>Alumni</h4>
 	<ul>
+		<li> <a href="http://www.mit.edu/~maryama/"> Maryam Aliakbarpour</a>, Postdoc 2021&ndash;2023 &rarr; Assistant Professor at Rice University
 		<li> <a href="https://audramarymcmillan.wixsite.com/mysite"> Audra McMillan</a>, Postdoc 2018&ndash;2020 &rarr; Research Scientist at Apple
 	</ul>
 	<ul>
@@ -60,9 +62,10 @@
 		<li> <a href="http://www.ccs.neu.edu/home/albertcheu/"> Albert Cheu</a>, PhD 2021 &rarr; Postdoc at Georgetown University  &nbsp;<span id="date">Khoury PhD Research Award Winner</span>
 	</ul>
 	<ul>
+		<li> <a href="">Stanley Wu</a>, Undergraduate, 2021&ndash;2023 &rarr; Ph Student at University of Chicago
 		<li> <a href="https://www.linkedin.com/in/tatiana-ediger"> Tatiana Ediger</a>, Undergraduate 2021 &rarr; Eight Sleep
-		<li> <a href="https://www.cs.utexas.edu/~jchamps/"> Jeff Champion</a>, Undergraduate 2018&ndash;2019 &rarr; Ph.D. Student at UT Austin &nbsp;<span id="date">CRA Outstanding Undergraduate Researcher Award Finalist</span> 
-		<li> <a href="https://mitalibafna.github.io/"> Mitali Bafna</a>, Undergraduate 2016 &rarr; Ph.D. Student at Harvard University
+		<li> <a href="https://www.cs.utexas.edu/~jchamps/"> Jeff Champion</a>, Undergraduate 2018&ndash;2019 &rarr; PhD Student at UT Austin &nbsp;<span id="date">CRA Outstanding Undergraduate Researcher Award Finalist</span> 
+		<li> <a href="https://mitalibafna.github.io/"> Mitali Bafna</a>, Undergraduate 2016 &rarr; PhD Student at Harvard University
 	</ul>
 
 </div>
