--- a/students.html
+++ b/students.html
@@ -62,10 +62,10 @@
 		<li> <a href="http://www.ccs.neu.edu/home/albertcheu/"> Albert Cheu</a>, PhD 2021 &rarr; Postdoc at Georgetown University  &nbsp;<span id="date">Khoury PhD Research Award Winner</span>
 	</ul>
 	<ul>
-		<li> <a href="">Stanley Wu</a>, Undergraduate, 2021&ndash;2023 &rarr; Ph Student at University of Chicago
+		<li> <a href="">Stanley Wu</a>, Undergraduate, 2021&ndash;2023 &rarr; PhD student at University of Chicago
 		<li> <a href="https://www.linkedin.com/in/tatiana-ediger"> Tatiana Ediger</a>, Undergraduate 2021 &rarr; Eight Sleep
-		<li> <a href="https://www.cs.utexas.edu/~jchamps/"> Jeff Champion</a>, Undergraduate 2018&ndash;2019 &rarr; PhD Student at UT Austin &nbsp;<span id="date">CRA Outstanding Undergraduate Researcher Award Finalist</span> 
-		<li> <a href="https://mitalibafna.github.io/"> Mitali Bafna</a>, Undergraduate 2016 &rarr; PhD Student at Harvard University
+		<li> <a href="https://www.cs.utexas.edu/~jchamps/"> Jeff Champion</a>, Undergraduate 2018&ndash;2019 &rarr; PhD student at UT Austin &nbsp;<span id="date">CRA Outstanding Undergraduate Researcher Award Finalist</span> 
+		<li> <a href="https://mitalibafna.github.io/"> Mitali Bafna</a>, Undergraduate 2016 &rarr; PhD student at Harvard University
 	</ul>
 
 </div>
