--- a/research.html
+++ b/research.html
@@ -17,7 +17,7 @@
 					 			<span id="nav-name">Jonathan Ullman</span>
                 <div class="off"><a href="index.html">About</a></div>
 								<div class="on"><a href="research.html">Research</a></div>         
-                <div class="off"> <a href="students.html">Students</a></div>
+                <div class="off"><a href="students.html">Students</a></div>
                 <div class="off"><a href="teaching.html">Teaching</a></div>
                 <div class="off"><a href="service.html">Service</a></div>                                   
     </div> 
@@ -43,6 +43,15 @@
 	<p>I prefer not to order authors by contribution, but sometimes the norms of the community and the needs of students demand it.  Author ordering is alphabetical except where otherwise noted.</p>
 
 <h4>Manuscripts</h4>
+
+<div class="paper">
+	<strong>TMI! Finetuned Models Leak Private Information from their Pretraining Data</strong>
+	<a href="https://arxiv.org/abs/2306.01181"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="http://www.johnabascal.com/">John Abascal</a>,	
+	<a href="">Stanley Wu</a>,
+	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>, and
+	Jonathan Ullman
+</div>
 
 <div class="paper">
 	<strong>Differentially Private Medians and Interior Points for Non-Pathological Data</strong>
