--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 	<!--<p>In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a></p>-->
 	
 	<ul>
+		<li><span id="date">06-05-2023</span> New <a href="https://arxiv.org/abs/2306.01181">paper</a> on membership-inference attacks.
 		<li><span id="date">05-24-2023</span> New <a href="https://arxiv.org/abs/2305.13440">paper</a> on differentially private medians.
 		<li><span id="date">05-14-2023</span> Congratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> on her COLT <a href="https://arxiv.org/abs/2209.03112">paper</a>!
 		<li><span id="date">05-11-2023</span> Excited for <a href="https://bostondataprivacy.github.io/privacy-day.html">Charles River Privacy Day!</a>
@@ -79,7 +80,6 @@
 		<li><span id="date">02-01-2023</span> New <a href="https://arxiv.org/abs/2301.13334">paper</a> on bias and variance in statistical estimation.
 		<li><span id="date">10-31-2022</span> New <a href="https://arxiv.org/abs/2210.15819">paper</a> on instance-optimal private estimation.
 		<li><span id="date">08-24-2022</span> New website design courtesy of my bio/academic niece <a href="https://www.kiragoldner.com/index.html">Kira Goldner</a>!</li>
-		<li><span id="date">08-03-2022</span> Excited to be back at Northeastern after my sabbatical!</li>
 	</ul></div>
 
 	<h4>
