--- a/research.html
+++ b/research.html
@@ -50,7 +50,7 @@
 	<a href="http://www.johnabascal.com/">John Abascal</a>,	
 	<a href="">Stanley Wu</a>,
 	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>, and
-	Jonathan Ullman
+	Jonathan Ullman (contribution order)
 </div>
 
 <div class="paper">
