--- a/students.html
+++ b/students.html
@@ -46,7 +46,7 @@
 		<li> <a href="https://konstantinabrk.github.io/"> Konstantina Bairaktari</a>, PhD Student, co-advised with Huy Nguyen
 		<li> <a href="http://www.johnabascal.com/"> John Abascal</a>, PhD Student, co-advised with Alina Oprea
 		<li> <a href=""> Rose Silver</a>, PhD Student
-		<li> <a href="https://sushaga.github.io//"> Sushant Agarwal</a>, PhD Student, co-advised with Alina Oprea
+		<li> <a href="https://sushaga.github.io//"> Sushant Agarwal</a>, PhD Student
 	</ul>
 	<!--<ul>
 		
@@ -58,12 +58,12 @@
 		<li> <a href="https://audramarymcmillan.wixsite.com/mysite"> Audra McMillan</a>, Postdoc 2018&ndash;2020 &rarr; Research Scientist at Apple
 	</ul>
 	<ul>
-		<li> <a href="http://www.ccs.neu.edu/home/vikrantsinghal/"> Vikrant Singhal</a>, PhD 2021 &rarr; Postdoc at University of Waterloo
+		<li> <a href="http://www.ccs.neu.edu/home/vikrantsinghal/"> Vikrant Singhal</a>, PhD 2021 &rarr; Postdoc at University of Waterloo &rarr; OpenDP
 		<li> <a href="http://www.ccs.neu.edu/home/albertcheu/"> Albert Cheu</a>, PhD 2021 &rarr; Postdoc at Georgetown University  &nbsp;<span id="date">Khoury PhD Research Award Winner</span>
 	</ul>
 	<ul>
 		<li> <a href="">Stanley Wu</a>, Undergraduate, 2021&ndash;2023 &rarr; PhD student at University of Chicago
-		<li> <a href="https://www.linkedin.com/in/tatiana-ediger"> Tatiana Ediger</a>, Undergraduate 2021 &rarr; Eight Sleep
+		<li> <a href="https://www.linkedin.com/in/tatiana-ediger"> Tatiana Ediger</a>, Undergraduate 2021
 		<li> <a href="https://www.cs.utexas.edu/~jchamps/"> Jeff Champion</a>, Undergraduate 2018&ndash;2019 &rarr; PhD student at UT Austin &nbsp;<span id="date">CRA Outstanding Undergraduate Researcher Award Finalist</span> 
 		<li> <a href="https://mitalibafna.github.io/"> Mitali Bafna</a>, Undergraduate 2016 &rarr; PhD student at Harvard University
 	</ul>
