--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
 	<!--<p>In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a></p>-->
 	
 	<ul>
+		<li><span id="date">07-07-2023</span> Welcome to <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi Haghifam</a>, our new Khoury Distinguished Postdoctoral Fellow!</li>
+		<li><span id="date">07-05-2023</span> Congratulations to <a href="https://www.ccs.neu.edu/home/lydiazak/">Lydia</a> on her thesis defense!  Good luck in your postdoc at UC Berkeley!</li>
 		<li><span id="date">06-05-2023</span> New <a href="https://arxiv.org/abs/2306.01181">paper</a> on membership-inference attacks.
 		<li><span id="date">05-24-2023</span> New <a href="https://arxiv.org/abs/2305.13440">paper</a> on differentially private medians.
 		<li><span id="date">05-14-2023</span> Congratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> on her COLT <a href="https://arxiv.org/abs/2209.03112">paper</a>!
@@ -86,11 +88,12 @@
 	<h4>Students</h4>
 	<p>I'm fortunate to work with an amazing group of students and postdocs.  Currently I work with:
 	<ul>
-		<li> <a href="http://www.ccs.neu.edu/home/lydiazak/">Lydia Zakynthinou</a> (PhD Student)
-		<li> <a href="https://konstantinabrk.github.io/">Konstantina Bairaktari</a> (PhD Student)
-		<li> <a href="http://www.johnabascal.com/">John Abascal</a> (PhD Student)
-		<li> <a href="">Rose Silver</a> (PhD Student)
-		<li> <a href="https://sushaga.github.io/">Sushant Agarwal</a> (PhD Student)
+		<li> <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi Haghifam</a>, Postdoc</li>
+		<li> <a href="https://konstantinabrk.github.io/"> Konstantina Bairaktari</a>, PhD Student, co-advised with Huy Nguyen</li>
+		<li> <a href="http://www.johnabascal.com/"> John Abascal</a>, PhD Student, co-advised with Alina Oprea</li>
+		<li> <a href=""> Rose Silver</a>, PhD Student</li>
+		<li> <a href="https://sushaga.github.io//"> Sushant Agarwal</a>, PhD Student</li>
+		<li> <a href="">Eric Chapdelaine</a>, Undergraduate</li>
 	</ul></p>
 
 </div>
