--- a/research.html
+++ b/research.html
@@ -86,6 +86,19 @@
 <p>Like most computer scientists, my work is primarily published in competitive conferences, which are typically as selective as top journals.  This list includes all primary publications of my work in regardless of venue.</p>
 
 <div class="paper">
+	<strong>Visual Utility Evaluation of Differentially Private Scatterplots</strong>
+	<!--<a href="https://osf.io/5t68s/"><span id="label-preprint">OSF</span></a>--><br/>
+	<a href="https://lpanavas.github.io/#/">Liudas Panavas</a>,
+	<a href="https://scholar.google.com/citations?user=iVU6xxwAAAAJ&hl=en">Tarik Crnovrsanin</a>,
+	<a href="http://universalities.com/">Jane L. Adams</a>,
+	<a href="https://groups.cs.umass.edu/asarv/">Ali Sarvghad</a>,
+	<a href="https://www.melanietory.com/">Melanie Tory</a>,
+	Jonathan Ullman, and
+	<a href="https://dunne.dev/">Cody Dunne</a><br/>
+	IEEE Transactions on Visualization and Computer Graphics <strong>(IEEE TVCG '23)</strong><br/>
+</div>
+
+<div class="paper">
 	<strong>Multitask Learning via Shared Features: Algorithms and Hardness</strong>
 	<a href="https://arxiv.org/abs/2209.03112"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://konstantinabrk.github.io/">Konstantina Bairaktari</a>,
@@ -331,7 +344,7 @@ IACR International Conference on Theory and Application of Cryptographic Techniq
 <strong>The Fienberg Problem: How to Allow Human Interactive Data Analysis in the Age of Differential Privacy</strong><br/>
 <a href="https://www.seas.harvard.edu/directory/dwork">Cynthia Dwork</a> and 
 Jonathan Ullman<br/>
-Journal of Privacy and Confidentiality, 2018.  Special issue commemorating Steve Feinberg.<br/>
+Journal of Privacy and Confidentiality <strong>(JPC '18)</strong>.  Special issue commemorating Steve Feinberg.<br/>
 </div>
 
 <div class="paper">
@@ -341,7 +354,7 @@ Journal of Privacy and Confidentiality, 2018.  Special issue commemorating Steve
 <a href="https://www.ics.uci.edu/~shantas/">Shantanu Sharma</a>
 <a href="http://infolab.stanford.edu/~ullman/">Jeffrey Ullman</a>, and
 Jonathan Ullman <br>
-Journal of Computer and Systems Science, 2018<br/>
+Journal of Computer and Systems Science <strong>(JCSS '18)</strong><br/>
 </div>
 
 <div class="paper">
@@ -391,7 +404,7 @@ IEEE International Symposium on Information Theory <strong>(ISIT'18)</strong><br
 <a href="http://www.malleshmpai.com/">Mallesh Pai</a>,
 <a href="http://www.cis.upenn.edu/~aaroth/">Aaron Roth</a>, and
 Jonathan Ullman <br>
-ACM Transactions on Economics and Computation, 2017<br/>
+ACM Transactions on Economics and Computation <strong>(ACM TEAC '17)</strong><br/>
 </div>
 
 <div class="paper">
@@ -399,7 +412,7 @@ ACM Transactions on Economics and Computation, 2017<br/>
 <a href="https://arxiv.org/abs/1501.06095"><span id="label-preprint">arXiv</span></a><br/>
 <a href="http://www.thomas-steinke.net/">Thomas Steinke</a> and
 Jonathan Ullman<br/>
-Journal of Privacy and Confidentiality, 2017<br/>
+Journal of Privacy and Confidentiality <strong>(JPC '17)</strong><br/>
 </div>
 
 <div class="paper">
