--- a/students.html
+++ b/students.html
@@ -42,15 +42,17 @@
 		
 <h4>Current Students</h4>
 	<ul>
-		<li> <a href="http://www.ccs.neu.edu/home/lydiazak/"> Lydia Zakynthinou</a>, PhD Student, co-advised with Huy Nguyen &nbsp;<span id="date">Facebook Fellow and Khoury PhD Research Award Winner</span>
-		<li> <a href="https://konstantinabrk.github.io/"> Konstantina Bairaktari</a>, PhD Student, co-advised with Huy Nguyen
-		<li> <a href="http://www.johnabascal.com/"> John Abascal</a>, PhD Student, co-advised with Alina Oprea
-		<li> <a href=""> Rose Silver</a>, PhD Student
-		<li> <a href="https://sushaga.github.io//"> Sushant Agarwal</a>, PhD Student
+		<li> <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi Haghifam</a>, Postdoc <span id="date">Khoury Distinguished Postdoctoral Fellow</span></li>
 	</ul>
-	<!--<ul>
-		
-	</ul>-->
+	<ul>
+		<li> <a href="https://konstantinabrk.github.io/"> Konstantina Bairaktari</a>, PhD Student, co-advised with Huy Nguyen</li>
+		<li> <a href="http://www.johnabascal.com/"> John Abascal</a>, PhD Student, co-advised with Alina Oprea</li>
+		<li> <a href=""> Rose Silver</a>, PhD Student</li>
+		<li> <a href="https://sushaga.github.io//"> Sushant Agarwal</a>, PhD Student</li>
+	</ul>
+	<ul>
+		<li> <a href="">Eric Chapdelaine</a>, Undergraduate</li>
+	</ul>
 
 <h4>Alumni</h4>
 	<ul>
@@ -58,6 +60,7 @@
 		<li> <a href="https://audramarymcmillan.wixsite.com/mysite"> Audra McMillan</a>, Postdoc 2018&ndash;2020 &rarr; Research Scientist at Apple
 	</ul>
 	<ul>
+		<li> <a href="http://www.ccs.neu.edu/home/lydiazak/"> Lydia Zakynthinou</a>, PhD 2023 &rarr; Postdoc at UC Berkeley &nbsp;<span id="date">Facebook Fellow and Khoury PhD Research Award Winner</span>
 		<li> <a href="http://www.ccs.neu.edu/home/vikrantsinghal/"> Vikrant Singhal</a>, PhD 2021 &rarr; Postdoc at University of Waterloo &rarr; OpenDP
 		<li> <a href="http://www.ccs.neu.edu/home/albertcheu/"> Albert Cheu</a>, PhD 2021 &rarr; Postdoc at Georgetown University  &nbsp;<span id="date">Khoury PhD Research Award Winner</span>
 	</ul>
