--- a/research.html
+++ b/research.html
@@ -87,7 +87,7 @@
 
 <div class="paper">
 	<strong>Visual Utility Evaluation of Differentially Private Scatterplots</strong>
-	<!--<a href="https://osf.io/5t68s/"><span id="label-preprint">OSF</span></a>--><br/>
+	<a href="https://ieeexplore.ieee.org/abstract/document/10173631"><span id="label-preprint">IEEE Xplore</span></a>--><br/>
 	<a href="https://lpanavas.github.io/#/">Liudas Panavas</a>,
 	<a href="https://scholar.google.com/citations?user=iVU6xxwAAAAJ&hl=en">Tarik Crnovrsanin</a>,
 	<a href="http://universalities.com/">Jane L. Adams</a>,
