--- a/research.html
+++ b/research.html
@@ -45,6 +45,14 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
+	<strong>Smooth Lower Bounds for Differentially Private Algorithms via Padding-and-Permuting Fingerprinting Codes</strong>
+	<a href="https://arxiv.org/abs/2307.07604"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="">Naty Peter</a>,	
+	<a href="https://sites.google.com/view/eliadtsfadia">Eliad Tsfadia</a>, and
+	Jonathan Ullman
+</div>
+
+<div class="paper">
 	<strong>TMI! Finetuned Models Leak Private Information from their Pretraining Data</strong>
 	<a href="https://arxiv.org/abs/2306.01181"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="http://www.johnabascal.com/">John Abascal</a>,	
