--- a/research.html
+++ b/research.html
@@ -94,6 +94,17 @@
 <p>Like most computer scientists, my work is primarily published in competitive conferences, which are typically as selective as top journals.  This list includes all primary publications of my work in regardless of venue.</p>
 
 <div class="paper">
+	<strong>Fair and Useful Cohort Selection</strong>
+	<a href="https://arxiv.org/abs/2009.02207"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="">Konstantina Bairaktari</a>,
+	<a href="">Paul Langton</a>,
+	<a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Le Nguyen</a>, 
+	<a href="https://nik-sm.github.io/">Niklas Smedemark-Margulies</a>, and
+	Jonathan Ullman<br/>
+	Transactions on Machine Learning Research <strong>(TMLR '23)</strong><br/>
+</div>
+
+<div class="paper">
 	<strong>Visual Utility Evaluation of Differentially Private Scatterplots</strong>
 	<a href="https://ieeexplore.ieee.org/abstract/document/10173631"><span id="label-preprint">IEEE Xplore</span></a><br/>
 	<a href="https://lpanavas.github.io/#/">Liudas Panavas</a>,
@@ -745,16 +756,6 @@ SIAM Journal on Computing, 2013<br/>
 
 
 <h4>Surveys and Other Writing</h4>
-
-<div class="paper">
-	<strong>Fair and Useful Cohort Selection</strong>
-	<a href="https://arxiv.org/abs/2009.02207"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="">Konstantina Bairaktari</a>,
-	<a href="">Paul Langton</a>,
-	<a href="https://www.ccs.neu.edu/home/hlnguyen/">Huy Le Nguyen</a>, 
-	<a href="https://nik-sm.github.io/">Niklas Smedemark-Margulies</a>, and
-	Jonathan Ullman
-</div>
 
 <div class="paper">
 <strong>DifferentialPrivacy.org</strong>
