--- a/research.html
+++ b/research.html
@@ -45,6 +45,15 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
+	<strong>Chameleon: Increasing Label-Only Membership Leakage with Adaptive Poisoning</strong>
+	<a href="https://arxiv.org/abs/2310.03838"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://harshch1803.github.io/">Harsh Chaudhuri</a>,	
+	<a href="https://severi.xyz/">Giorgio Severi</a>, 
+	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>, and
+	Jonathan Ullman
+</div>
+
+<div class="paper">
 	<strong>Smooth Lower Bounds for Differentially Private Algorithms via Padding-and-Permuting Fingerprinting Codes</strong>
 	<a href="https://arxiv.org/abs/2307.07604"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="">Naty Peter</a>,	
@@ -150,7 +159,7 @@
 
 <div class="paper">
 	<strong>SNAP: Efficient Extraction of Private Properties with Poisoning</strong>
-	<a href="https://arxiv.org/abs/2208.12348"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://arxiv.org/abs/2208.12348"><span id="label-preprint">arXiv</span></a><a href="https://github.com/johnmath/snap-sp23"> <span id="label-code">GitHub</span></a> <a href="https://www.youtube.com/watch?v=p89ZQEt7qhM"><span id="label-talk">15m Video</span></a><br/>
 	<a href="">Harsh Chaudhuri</a>,
 	<a href="https://johnmath.github.io/">John Abascal</a>,
 	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>,
