--- a/service.html
+++ b/service.html
@@ -55,7 +55,7 @@
 
 <h4> Program Committee Member / Area Chair </h4>
 <ul>
-	<li> Conference on Learning Theory (COLT): 2023</li>
+	<li> Conference on Learning Theory (COLT): 2023, 2024</li>
 	<li> ACM Conference on Fairness, Accountability, and Transparency (FAccT): 2022</li>
 	<li> AAAI Conference on Artificial Intelligence (AAAI): 2022</li>
 	<li> IEEE Symposium on Security &amp; Privacy (S&amp;P): 2020, 2021</li>
