--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 	<!--<p>In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a></p>-->
 	
 	<ul>
+		<li><span id="date">10-09-2023</span> New <a href="https://arxiv.org/abs/2310.03838">paper</a> on label-only membership inference.
 		<li><span id="date">07-18-2023</span> New <a href="https://arxiv.org/abs/2307.07604">paper</a> on lower bounds for DP clustering and subspace estimation.
 		<li><span id="date">07-07-2023</span> Welcome to <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi Haghifam</a>, our new Khoury Distinguished Postdoctoral Fellow!</li>
 		<li><span id="date">07-05-2023</span> Congratulations to <a href="https://www.ccs.neu.edu/home/lydiazak/">Lydia</a> on her thesis defense!  Good luck in your postdoc at UC Berkeley!</li>
@@ -79,8 +80,6 @@
 		<li><span id="date">05-11-2023</span> Excited for <a href="https://bostondataprivacy.github.io/privacy-day.html">Charles River Privacy Day!</a>
 		<li><span id="date">04-24-2023</span> Huge congratulations to <a href="http://www.mit.edu/~maryama/">Maryam</a> on her faculty position at Rice University!
 		<li><span id="date">04-24-2023</span> Congratulations to <a href="http://www.ccs.neu.edu/home/lydiazak/">Lydia</a> on her ICML <a href="https://arxiv.org/abs/2302.01855">paper</a>!
-		<li><span id="date">02-06-2023</span> New <a href="https://arxiv.org/abs/2302.01855">paper</a> on the connection between differential privacy and robust statistics.
-		<li><span id="date">02-01-2023</span> New <a href="https://arxiv.org/abs/2301.13334">paper</a> on bias and variance in statistical estimation.
 	</ul></div>
 
 	<h4>
