--- a/teaching.html
+++ b/teaching.html
@@ -38,7 +38,7 @@
 	
 <h2>Teaching</h2>
 	
-<p>I come from a family of educators, and my passion for teaching is as strong as my passion for research.  In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a>  You can also see what courses I've taught in the past.</p>
+<p>I come from a family of educators, and my passion for teaching is as strong as my passion for research.  In Fall 2023 I am teaching <a href="https://northeastern.instructure.com/courses/152776">CS 3000: Algorithms & Data.</a>  You can also see what courses I've taught in the past.</p>
 		
 <h4>Courses at Northeastern</h4>
 	<ul>
@@ -46,6 +46,7 @@
 			<a href="https://dpcourse.github.io/">Spring 2021</a>
 		</li>
 		<li>CS 7800: Advanced Algorithms: 
+			<a href="cs7800-f22/index.html">Fall 2022</a>,
 			<a href="https://www.ccs.neu.edu/home/jullman/cs7800f17/syllabus.html">Fall 2017</a>, 
 			<a href="https://www.ccs.neu.edu/home/jullman/cs7800f16/syllabus.html">Fall 2016</a>, 
 			<a href="https://www.ccs.neu.edu/home/jullman/cs7800f15/syllabus.html">Fall 2015</a>
