--- a/research.html
+++ b/research.html
@@ -50,7 +50,7 @@
 	<a href="https://harshch1803.github.io/">Harsh Chaudhuri</a>,	
 	<a href="https://severi.xyz/">Giorgio Severi</a>, 
 	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>, and
-	Jonathan Ullman
+	Jonathan Ullman (contribution order)
 </div>
 
 <div class="paper">
