--- a/teaching.html
+++ b/teaching.html
@@ -38,7 +38,7 @@
 	
 <h2>Teaching</h2>
 	
-<p>I come from a family of educators, and my passion for teaching is as strong as my passion for research.  In Fall 2023 I am teaching <a href="https://northeastern.instructure.com/courses/152776">CS 3000: Algorithms & Data.</a>  You can also see what courses I've taught in the past.</p>
+<p>I come from a family of teachers, and my passion for teaching is as strong as my passion for research.  In Fall 2023 I am teaching <a href="https://northeastern.instructure.com/courses/152776">CS 3000: Algorithms & Data.</a>  You can also see what courses I've taught in the past.</p>
 		
 <h4>Courses at Northeastern</h4>
 	<ul>
