--- a/students.html
+++ b/students.html
@@ -47,7 +47,7 @@
 	<ul>
 		<li> <a href="https://konstantinabrk.github.io/"> Konstantina Bairaktari</a>, PhD Student, co-advised with Huy Nguyen</li>
 		<li> <a href="http://www.johnabascal.com/"> John Abascal</a>, PhD Student, co-advised with Alina Oprea</li>
-		<li> <a href=""> Rose Silver</a>, PhD Student</li>
+		<li> <a href="https://rosesilver.github.io/"> Rose Silver</a>, PhD Student</li>
 	</ul>
 	<ul>
 		<li> <a href="">Eric Chapdelaine</a>, Undergraduate</li>
