--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		<li> <a href="https://mhaghifam.github.io/mahdihaghifam/">Mahdi Haghifam</a>, Postdoc</li>
 		<li> <a href="https://konstantinabrk.github.io/"> Konstantina Bairaktari</a>, PhD Student, co-advised with Huy Nguyen</li>
 		<li> <a href="http://www.johnabascal.com/"> John Abascal</a>, PhD Student, co-advised with Alina Oprea</li>
-		<li> <a href=""> Rose Silver</a>, PhD Student</li>
+		<li> <a href="https://rosesilver.github.io/"> Rose Silver</a>, PhD Student</li>
 		<li> <a href="">Eric Chapdelaine</a>, Undergraduate</li>
 	</ul></p>
 
