--- a/research.html
+++ b/research.html
@@ -71,15 +71,6 @@
 </div>
 
 <div class="paper">
-	<strong>Differentially Private Medians and Interior Points for Non-Pathological Data</strong>
-	<a href="https://arxiv.org/abs/2305.13440"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="https://www.mit.edu/~maryama/">Maryam Aliakbarpour</a>,	
-	<a href="">Rose Silver</a>,
-	<a href="http://www.thomas-steinke.net/">Thomas Steinke</a>, and
-	Jonathan Ullman
-</div>
-
-<div class="paper">
 	<strong>A Bias-Variance-Privacy Trilemma for Statistical Estimation</strong>
 	<a href="https://arxiv.org/abs/2301.13334"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
@@ -101,6 +92,16 @@
 <h4>Conference and other Primary Publications</h4>
 
 <p>Like most computer scientists, my work is primarily published in competitive conferences, which are typically as selective as top journals.  This list includes all primary publications of my work in regardless of venue.</p>
+
+<div class="paper">
+	<strong>Differentially Private Medians and Interior Points for Non-Pathological Data</strong>
+	<a href="https://arxiv.org/abs/2305.13440"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://www.mit.edu/~maryama/">Maryam Aliakbarpour</a>,	
+	<a href="">Rose Silver</a>,
+	<a href="http://www.thomas-steinke.net/">Thomas Steinke</a>, and
+	Jonathan Ullman<br/>
+	Innovations in Theoretical Computer Science <strong>(ITCS '24)</strong><br/>
+</div>
 
 <div class="paper">
 	<strong>Fair and Useful Cohort Selection</strong>
