--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 	<!--<p>In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a></p>-->
 	
 	<ul>
+		<li><span id="date">12-28-2023</span> New <a href="https://arxiv.org/abs/2312.13978">paper</a> on metalearning!
 		<li><span id="date">11-08-2023</span> Congratulations to <a href="https://rosesilver.github.io/">Rose</a> on her ITCS <a href="https://arxiv.org/abs/2305.13440">paper</a>!
 		<li><span id="date">10-09-2023</span> New <a href="https://arxiv.org/abs/2310.03838">paper</a> on label-only membership inference.
 		<li><span id="date">07-18-2023</span> New <a href="https://arxiv.org/abs/2307.07604">paper</a> on lower bounds for DP clustering and subspace estimation.
@@ -79,7 +80,6 @@
 		<li><span id="date">05-24-2023</span> New <a href="https://arxiv.org/abs/2305.13440">paper</a> on differentially private medians.
 		<li><span id="date">05-14-2023</span> Congratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> on her COLT <a href="https://arxiv.org/abs/2209.03112">paper</a>!
 		<li><span id="date">05-11-2023</span> Excited for <a href="https://bostondataprivacy.github.io/privacy-day.html">Charles River Privacy Day!</a>
-		<li><span id="date">04-24-2023</span> Huge congratulations to <a href="http://www.mit.edu/~maryama/">Maryam</a> on her faculty position at Rice University!
 	</ul></div>
 
 	<h4>
