--- a/research.html
+++ b/research.html
@@ -45,6 +45,16 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
+	<strong>Metalearning with Very Few Samples Per Task</strong>
+	<a href="https://arxiv.org/abs/2312.13978"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://www.mit.edu/~maryama/">Maryam Aliakbarpour</a>,
+	<a href="https://konstantinabrk.github.io/">Konstantina Bairaktari</a>,	
+	<a href="https://cs-people.bu.edu/grbrown/">Gavin Brown</a>, 
+	<a href="https://cs-people.bu.edu/ads22/">Adam Smith</a>, and
+	Jonathan Ullman
+</div>
+
+<div class="paper">
 	<strong>Chameleon: Increasing Label-Only Membership Leakage with Adaptive Poisoning</strong>
 	<a href="https://arxiv.org/abs/2310.03838"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://harshch1803.github.io/">Harsh Chaudhuri</a>,	
