--- a/teaching.html
+++ b/teaching.html
@@ -38,7 +38,7 @@
 	
 <h2>Teaching</h2>
 	
-<p>I come from a family of teachers, and my passion for teaching is as strong as my passion for research.  In Fall 2023 I am teaching <a href="https://northeastern.instructure.com/courses/152776">CS 3000: Algorithms & Data.</a>  You can also see what courses I've taught in the past.</p>
+<p>I come from a family of teachers, and my passion for teaching is as strong as my passion for research.  I have teaching release for Spring 2024.  You can see what courses I've taught in the past below.</p>
 		
 <h4>Courses at Northeastern</h4>
 	<ul>
@@ -52,6 +52,7 @@
 			<a href="https://www.ccs.neu.edu/home/jullman/cs7800f15/syllabus.html">Fall 2015</a>
 		</li>
 		<li>CS 3000: Algorithms &amp; Data: 
+			<a href="https://northeastern.instructure.com/courses/152776">Fall 2023</a>,
 			<a href= "https://www.ccs.neu.edu/home/rraj/Courses/3000/F20/www/index.html">Fall 2020</a>, 
 			<a href="https://www.ccs.neu.edu/home/jullman/cs3000s20/syllabus.html">Spring 2020</a>,  
 			<a href="https://www.ccs.neu.edu/home/jullman/cs3000f18/syllabus.html">Fall 2018</a>, 
