--- a/research.html
+++ b/research.html
@@ -55,15 +55,6 @@
 </div>
 
 <div class="paper">
-	<strong>Chameleon: Increasing Label-Only Membership Leakage with Adaptive Poisoning</strong>
-	<a href="https://arxiv.org/abs/2310.03838"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="https://harshch1803.github.io/">Harsh Chaudhuri</a>,	
-	<a href="https://severi.xyz/">Giorgio Severi</a>, 
-	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>, and
-	Jonathan Ullman (contribution order)
-</div>
-
-<div class="paper">
 	<strong>Smooth Lower Bounds for Differentially Private Algorithms via Padding-and-Permuting Fingerprinting Codes</strong>
 	<a href="https://arxiv.org/abs/2307.07604"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="">Naty Peter</a>,	
@@ -102,6 +93,16 @@
 <h4>Conference and other Primary Publications</h4>
 
 <p>Like most computer scientists, my work is primarily published in competitive conferences, which are typically as selective as top journals.  This list includes all primary publications of my work in regardless of venue.</p>
+
+<div class="paper">
+	<strong>Chameleon: Increasing Label-Only Membership Leakage with Adaptive Poisoning</strong>
+	<a href="https://arxiv.org/abs/2310.03838"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://harshch1803.github.io/">Harsh Chaudhuri</a>,	
+	<a href="https://severi.xyz/">Giorgio Severi</a>, 
+	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>, and
+	Jonathan Ullman (contribution order)<br/>
+	International Conference on Learning Representations <strong>(ICLR '24)</strong><br/>
+</div>
 
 <div class="paper">
 	<strong>Differentially Private Medians and Interior Points for Non-Pathological Data</strong>
