--- a/research.html
+++ b/research.html
@@ -63,15 +63,6 @@
 </div>
 
 <div class="paper">
-	<strong>TMI! Finetuned Models Leak Private Information from their Pretraining Data</strong>
-	<a href="https://arxiv.org/abs/2306.01181"><span id="label-preprint">arXiv</span></a><br/>
-	<a href="http://www.johnabascal.com/">John Abascal</a>,	
-	<a href="">Stanley Wu</a>,
-	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>, and
-	Jonathan Ullman (contribution order)
-</div>
-
-<div class="paper">
 	<strong>A Bias-Variance-Privacy Trilemma for Statistical Estimation</strong>
 	<a href="https://arxiv.org/abs/2301.13334"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="http://www.gautamkamath.com/">Gautam Kamath</a>,
@@ -93,6 +84,16 @@
 <h4>Conference and other Primary Publications</h4>
 
 <p>Like most computer scientists, my work is primarily published in competitive conferences, which are typically as selective as top journals.  This list includes all primary publications of my work in regardless of venue.</p>
+
+<div class="paper">
+	<strong>TMI! Finetuned Models Leak Private Information from their Pretraining Data</strong>
+	<a href="https://arxiv.org/abs/2306.01181"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="http://www.johnabascal.com/">John Abascal</a>,	
+	<a href="">Stanley Wu</a>,
+	<a href="https://www.ccs.neu.edu/home/alina/">Alina Oprea</a>, and
+	Jonathan Ullman (contribution order)<br/>
+	Privacy Enhancing Technologies Symposium <strong>(PETS '24)</strong><br/>
+</div>
 
 <div class="paper">
 	<strong>Chameleon: Increasing Label-Only Membership Leakage with Adaptive Poisoning</strong>
