--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				Northeastern University<br/>
 			</div>
 			<div id="mycontact">
-				<strong>Office:</strong> 623 ISEC (805 Columbus Ave, Boston, MA, 02118)<br/>
+				<strong>Office:</strong> 177 Huntington, Office 616<br/>
 				<strong>Email:</strong> jullman&#64;ccs.neu.edu<br/>	
 			</div>
 			
