--- a/research.html
+++ b/research.html
@@ -86,6 +86,17 @@
 <p>Like most computer scientists, my work is primarily published in competitive conferences, which are typically as selective as top journals.  This list includes all primary publications of my work in regardless of venue.</p>
 
 <div class="paper">
+	<strong>Program Analysis for Adaptive Data Analysis</strong>
+	<!--<a href="https://arxiv.org/abs/2210.15819"><span id="label-preprint">arXiv</span></a>--><br/>
+	<a href="https://cs-people.bu.edu/jiawenl/">Jiawen Liu</a>,
+	<a href="https://www.linkedin.com/in/weihaoqu/">Weihao Qu</a>,
+	<a href="https://cs-people.bu.edu/gaboardi/">Marco Gaboardi</a>,
+	<a href="https://people.mpi-sws.org/~dg/">Deepak Garg</a>, and
+	Jonathan Ullman<br/>
+	Conference on Programming Languages Design and Implementation <strong>(PLDI '24)</strong><br/>
+</div>
+
+<div class="paper">
 	<strong>TMI! Finetuned Models Leak Private Information from their Pretraining Data</strong>
 	<a href="https://arxiv.org/abs/2306.01181"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="http://www.johnabascal.com/">John Abascal</a>,	
