--- a/research.html
+++ b/research.html
@@ -92,7 +92,7 @@
 	<a href="https://www.linkedin.com/in/weihaoqu/">Weihao Qu</a>,
 	<a href="https://cs-people.bu.edu/gaboardi/">Marco Gaboardi</a>,
 	<a href="https://people.mpi-sws.org/~dg/">Deepak Garg</a>, and
-	Jonathan Ullman<br/>
+	Jonathan Ullman (contribution order)<br/>
 	Conference on Programming Languages Design and Implementation <strong>(PLDI '24)</strong><br/>
 </div>
 
