--- a/research.html
+++ b/research.html
@@ -45,6 +45,14 @@
 <h4>Manuscripts</h4>
 
 <div class="paper">
+	<strong>How to Make the Gradients Small Privately: Improved Rates for Differentially Private Non-Convex Optimization</strong>
+	<a href="https://arxiv.org/abs/2402.11173"><span id="label-preprint">arXiv</span></a><br/>
+	<a href="https://sites.google.com/view/andrewlowy">Andrew Lowy</a>,
+	Jonathan Ullman, and
+	<a href="https://pages.cs.wisc.edu/~swright/">Stephen J. Wright</a>
+</div>
+
+<div class="paper">
 	<strong>Metalearning with Very Few Samples Per Task</strong>
 	<a href="https://arxiv.org/abs/2312.13978"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://www.mit.edu/~maryama/">Maryam Aliakbarpour</a>,
