--- a/research.html
+++ b/research.html
@@ -49,7 +49,7 @@
 	<a href="https://arxiv.org/abs/2402.11173"><span id="label-preprint">arXiv</span></a><br/>
 	<a href="https://sites.google.com/view/andrewlowy">Andrew Lowy</a>,
 	Jonathan Ullman, and
-	<a href="https://pages.cs.wisc.edu/~swright/">Stephen J. Wright</a>
+	<a href="https://pages.cs.wisc.edu/~swright/">Stephen Wright</a>
 </div>
 
 <div class="paper">
