--- a/students.html
+++ b/students.html
@@ -50,7 +50,7 @@
 		<li> <a href="https://rosesilver.github.io/"> Rose Silver</a>, PhD Student</li>
 	</ul>
 	<ul>
-		<li> <a href="">Eric Chapdelaine</a>, Undergraduate</li>
+		<li> <a href="">Eric Chapdelaine</a>, NEU UG</li>
 	</ul>
 
 <h4>Alumni</h4>
@@ -61,13 +61,13 @@
 	<ul>
 		<li> <a href="http://www.ccs.neu.edu/home/lydiazak/"> Lydia Zakynthinou</a>, PhD 2023 &rarr; Postdoc at UC Berkeley &nbsp;<span id="date">Facebook Fellow and Khoury PhD Research Award Winner</span>
 		<li> <a href="http://www.ccs.neu.edu/home/vikrantsinghal/"> Vikrant Singhal</a>, PhD 2021 &rarr; Postdoc at University of Waterloo &rarr; Research Associate at OpenDP
-		<li> <a href="http://albertcheu.com/"> Albert Cheu</a>, PhD 2021 &rarr; Postdoc at Georgetown University  &nbsp;<span id="date">Khoury PhD Research Award Winner</span>
+		<li> <a href="http://albertcheu.com/"> Albert Cheu</a>, PhD 2021 &rarr; Postdoc at Georgetown University &rarr; Research Scientist at Google  &nbsp;<span id="date">Khoury PhD Research Award Winner</span>
 	</ul>
 	<ul>
-		<li> <a href="https://stanley-wu.com/">Stanley Wu</a>, Undergraduate, 2021&ndash;2023 &rarr; PhD student at University of Chicago
-		<li> <a href="https://www.linkedin.com/in/tatiana-ediger"> Tatiana Ediger</a>, Undergraduate 2021
-		<li> <a href="https://www.cs.utexas.edu/~jchamps/"> Jeff Champion</a>, Undergraduate 2018&ndash;2019 &rarr; PhD student at UT Austin &nbsp;<span id="date">CRA Outstanding Undergraduate Researcher Award Finalist</span> 
-		<li> <a href="https://mitalibafna.github.io/"> Mitali Bafna</a>, Undergraduate 2016 &rarr; PhD student at Harvard University
+		<li> <a href="https://stanley-wu.com/">Stanley Wu</a>, NEU UG, 2021&ndash;2023 &rarr; PhD student at University of Chicago <span id="date">NSF GRFP Winner</span>
+		<li> <a href="https://www.linkedin.com/in/tatiana-ediger"> Tatiana Ediger</a>, NEU UG 2021
+		<li> <a href="https://www.cs.utexas.edu/~jchamps/"> Jeff Champion</a>, NEU UG 2018&ndash;2019 &rarr; PhD student at UT Austin &nbsp;<span id="date">CRA Outstanding Undergraduate Researcher Award Finalist</span> 
+		<li> <a href="https://mitalibafna.github.io/"> Mitali Bafna</a>, Visiting UG 2016 &rarr; PhD student at Harvard University
 	</ul>
 
 </div>
