--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
 	<!--<p>In Fall 2022 I am teaching <a href="cs7800-f22/index.html">CS 7800: Advanced Algorithms.</a></p>-->
 	
 	<ul>
+		<li><span id="date">04-15-2024</span> Congratulations to former PhD student <a href="http://www.johnabascal.com/">John</a> and <a href="http://albertcheu.com/">Albert</a> on his new job as a Research Scientist at Google!
 		<li><span id="date">02-01-2024</span> Congratulations to <a href="http://www.johnabascal.com/">John</a> and <a href="https://stanley-wu.com/">Stanley</a> on their PETS <a href="https://arxiv.org/abs/2306.01181">paper</a>!
 		<li><span id="date">12-28-2023</span> New <a href="https://arxiv.org/abs/2312.13978">paper</a> on metalearning!
 		<li><span id="date">11-08-2023</span> Congratulations to <a href="https://rosesilver.github.io/">Rose</a> on her ITCS <a href="https://arxiv.org/abs/2305.13440">paper</a>!
@@ -79,7 +80,6 @@
 		<li><span id="date">07-05-2023</span> Congratulations to <a href="https://www.ccs.neu.edu/home/lydiazak/">Lydia</a> on her thesis defense!  Good luck in your postdoc at UC Berkeley!</li>
 		<li><span id="date">06-05-2023</span> New <a href="https://arxiv.org/abs/2306.01181">paper</a> on membership-inference attacks.
 		<li><span id="date">05-24-2023</span> New <a href="https://arxiv.org/abs/2305.13440">paper</a> on differentially private medians.
-		<li><span id="date">05-14-2023</span> Congratulations to <a href="https://konstantinabrk.github.io/">Konstantina</a> on her COLT <a href="https://arxiv.org/abs/2209.03112">paper</a>!
 	</ul></div>
 
 	<h4>
