--- a/research.html
+++ b/research.html
@@ -154,7 +154,7 @@
 	<a href="https://groups.cs.umass.edu/asarv/">Ali Sarvghad</a>,
 	<a href="https://www.melanietory.com/">Melanie Tory</a>,
 	Jonathan Ullman, and
-	<a href="https://dunne.dev/">Cody Dunne</a><br/>
+	<a href="https://dunne.dev/">Cody Dunne</a> (contribution order)<br/>
 	IEEE Transactions on Visualization and Computer Graphics <strong>(IEEE TVCG '23)</strong><br/>
 </div>
 
